Vendor defaults: code-review fixes (issues #60, #61)
- Comment stripping no longer treats a mid-word apostrophe as a quote,
  so '# ...' after text like "can't connect" is stripped as a comment.
- reset rule vendor:<name> --include-vendor-defaults suspends the rule in
  every context, not just the first one holding it.
- A vendor logger's reason is carried into its audit record.
- Vendor handlers keep file order (Map.copyOf didn't).
- Two misplaced javadocs moved back onto their own methods.

Co-Authored-By: Claude Opus 5.5 <noreply@anthropic.com>